# hardDecording

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/csu/liutao/ffmpegdemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/csu/liutao/ffmpegdemo/: CodecEncodeMgr.kt  MainActivity.kt  PictureMgr.kt  SurfaceImgView.kt  Utils.kt
app/src/main/java/csu/liutao/ffmpegdemo/aac/: AacBytesInfo.kt  AacDecoder.kt  AacEncoder.kt  AacPlayer.kt  AacPlayerRunnable.kt  AacRecordRunnable.kt  AacThread.kt  AudioRecordManager.kt  AudioTrackManager.kt
app/src/main/java/csu/liutao/ffmpegdemo/adapters/: MainRecycleAdapter.kt  MediasAdapter.kt  RecordAdapter.kt
app/src/main/java/csu/liutao/ffmpegdemo/ativities/: AudioRecordsActivity.kt  MainActivity.kt  MediaPlayActivity.kt  MediaPlayerActivity.kt  MediaRecordActivity.kt  MediasActivity.kt  OpglImageActivity.kt  PictureActivity.kt  RecordsActivity.kt  SurfaceImgActivity.kt  VideoPlayActivity.kt  VideoRecordActivity.kt  VideosActivity.kt
app/src/main/java/csu/liutao/ffmpegdemo/audios/: AudioDecoder.kt  AudioEncoder.kt  AudioMgr.kt  AudioRecordMgr.kt  AudioRecordView.kt  AudioTrackMgr.kt  (+4 more)
app/src/main/res/layout/: activity_main.xml  activity_media_play.xml  activity_media_record.xml  activity_medias.xml  activity_opgl_vedios.xml  activity_picture.xml  main_item.xml  media_base_layout.xml  media_item.xml  record_item.xml  records_activity.xml  surface_img.xml
app/src/main/res/raw/: camera_frag.glsl  camera_vetex.glsl  img_base_frag.glsl  img_base_vertex.glsl  mallet_frag.glsl  mallet_vertex.glsl  simple_fragment.glsl  simple_vetex.glsl  table_frag.glsl  table_vertex.glsl
app/src/main/res/values/: attrs.xml  styles.xml
app/src/test/java/csu/liutao/ffmpegdemo/: ExampleUnitTest.kt
ffmpegmgr/: build.gradle
ffmpegmgr/src/androidTest/java/csu/liutao/ffmpegmgr/: ExampleInstrumentedTest.java
ffmpegmgr/src/main/: AndroidManifest.xml
ffmpegmgr/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ffmpegmgr/src/main/java/csu/liutao/ffmpegmgr/: FfmpegMgr.java
ffmpegmgr/src/main/res/values/: strings.xml
ffmpegmgr/src/test/java/csu/liutao/ffmpegmgr/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+76 files in other folders)
